--- a/snort/snortgui/resources/info/requirements.txt
+++ b/snort/snortgui/resources/info/requirements.txt
@@ -4,4 +4,4 @@ sudo -S apt install python3-pil python3-pil.imagetk -y -q=3
 sudo -S apt install gedit -y -q=3
 sudo -S apt install snort -y -q=3
 sudo -S apt install python3-matplotlib -y -q=3
-pip3 install psutil -q 2>/dev/null
+pip3 install psutil 
